# SystemnahesProgrammieren

./: .gitignore  README.md
SysProg_CLion_Project/: CMakeLists.txt  README.txt
SysProg_CLion_Project/Buffer/includes/: TestBuffer.h
SysProg_CLion_Project/Buffer/src/: Buffer.cpp  TestBuffer.cpp
SysProg_CLion_Project/Symboltable/includes/: Information.h  StringTabNode.h  StringTable.h  Symboltable.h
SysProg_CLion_Project/Symboltable/src/: Information.cpp  StringTabNode.cpp  StringTable.cpp  SymTabEntry.cpp  Symboltable.cpp  TestSymboltable.cpp
SysProg_CLion_Project/assets/: program_1.txt
SysProg_CLion_Project/assets/tests/Parser/: executeParserTest.sh
SysProg_CLion_Project/src/Automat/includes/: Automat.h
SysProg_CLion_Project/src/Automat/src/: Automat.cpp  TestAutomat.cpp
SysProg_CLion_Project/src/Buffer/assets/: buffer-position-test-file.txt  buffer-test-file.txt
SysProg_CLion_Project/src/Buffer/includes/: Buffer.h
SysProg_CLion_Project/src/Buffer/src/: Buffer.cpp  TestBuffer.cpp
SysProg_CLion_Project/src/Parser/includes/: CodeGenerator.h  Node.h  ParseTree.h  ParseTreeVisitor.h  Parser.h  TypeChecker.h
SysProg_CLion_Project/src/Parser/includes/Nodes/: NodeArray.h  NodeDecl.h  NodeDecls.h  NodeEpsilon.h  NodeExp.h  NodeExp2.h  NodeExp2Bracket.h  NodeExp2Exclamation.h  NodeExp2Identifier.h  NodeExp2Integer.h  NodeExp2Minus.h  NodeIdentifier.h  NodeIndex.h  NodeInteger.h  NodeOp.h  NodeOpExp.h  NodeProg.h  NodeStatement.h  NodeStatementAssign.h  NodeStatementBlock.h  NodeStatementIf.h  NodeStatementRead.h  NodeStatementWhile.h  NodeStatementWrite.h  NodeStatements.h
SysProg_CLion_Project/src/Parser/src/: CodeGenerator.cpp  Node.cpp  ParseTree.cpp  ParseTreeVisitorType.cpp  Parser.cpp  TestParser.cpp  TypeChecker.cpp
SysProg_CLion_Project/src/Scanner/assets/: program_1.txt
SysProg_CLion_Project/src/Scanner/includes/: Scanner.h  Token.h
SysProg_CLion_Project/src/Scanner/src/: Scanner.cpp  StartScanner.cpp  Token.cpp
SysProg_CLion_Project/src/Symboltable/includes/: Information.h  StringTable.h  Symboltable.h
SysProg_CLion_Project/src/Symboltable/src/: Information.cpp  StringTabNode.cpp  StringTable.cpp  SymTabEntry.cpp  Symboltable.cpp  TestSymboltable.cpp
